💄 Fix layout issues found on tablet - closes #68

--- a/wp-content/themes/simplefolk/admin-style.css
+++ b/wp-content/themes/simplefolk/admin-style.css
@@ -24,6 +24,11 @@
     background-color: #000;
     text-align: center;
 }
+
+#poststuff #post-body.columns-2 {
+    margin-right: 0 !important;
+}
+
 @media only screen and (max-width: 767px) {
     #post-body-content {
         width: 100%;
