--- a/wp-content/themes/simplefolk/style.css
+++ b/wp-content/themes/simplefolk/style.css
@@ -677,6 +677,7 @@ body {
 /* #main {
     padding: 0 40px;
 } */
+
 #primary_full_width {
     width: 100%;
     padding: 10px 20px;
@@ -737,6 +738,7 @@ figcaption {
 }
 
 #primary {
+    display: flex;
     padding: 20px 40px;
     margin: 20px 0 40px;
 }
